# Paradigmas

./: .gitignore
content/: Paradigmas de Programación-02a.pptx  Paradigmas de Programación-03a.pptx  Paradigmas de Programación-04a.pptx  Paradigmas de Programación-05a.pptx  Paradigmas de Programación-06a.pptx  Paradigmas de Programación-07a.pptx  ~$Paradigmas de Programación-06a.pptx
cpp/: declarativo.cpp  test.cpp  varilla.cpp
haskell/: config.cabal  ejercicios.hs  fibonacci.hs  stack.yaml
haskell/src/: Library.hs  ej-cartas.hs  ej-libreria.hs  ex3-ppt4.hs  exercise2-ppt3.hs
haskell/test/: Spec.hs
prolog/src/: main.pl
