name:                config
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Library
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , config
  hs-source-dirs:      test
  default-language:    Haskell2010